--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                     <div class="et_pb_column et_pb_column_1_2 et_pb_column_3 et_clickable  et_pb_css_mix_blend_mode_passthrough">
 
                                         <div class="et_pb_module et_pb_text et_pb_text_3  et_pb_text_align_left et_pb_bg_layout_light">
-                                            <div class="et_pb_text_inner"><h2>Sé feliz,<br />Get high</h2></div>
+                                            <div class="et_pb_text_inner"><h2>Be happy,<br />Get high</h2></div>
                                         </div>
 
                                         <div class="et_pb_module et_pb_text et_pb_text_4  et_pb_text_align_left et_pb_bg_layout_light">
