--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                         <div class="et_pb_module et_pb_text et_pb_text_4  et_pb_text_align_left et_pb_bg_layout_light">
 
                                             <div class="et_pb_text_inner">
-                                                <h2>Herbalist es aquel que utiliza las plantas para el bienestar</h2>
+                                                <h2>Herbalist es aquel que utiliza las plantas para el bienestar.</h2>
                                             </div>
 
                                         </div>
@@ -549,7 +549,7 @@
                                         <div class="et_pb_module et_pb_text et_pb_text_5  et_pb_text_align_left et_pb_bg_layout_light">
 
                                             <div class="et_pb_text_inner">
-                                                <p>Accesorios 420 especialmente para Heavy Smokers<br><br> </p>
+                                                <p>Equilibrio y armonía en nuestro cuerpo<br><br> </p>
                                             </div>
 
 
