--- a/index.html
+++ b/index.html
@@ -592,9 +592,9 @@
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">₡10.000</h5>
+                                                <h5 class="deal-cat">₡12.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">Tana - Mini báscula digital Fuzion</h3>
+                                            <h3 class="deals-tit">Tana - Mini báscula digital</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Pesa tus hierbas con la mejor precisión</h6>
                                             </div>
