--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -485,7 +485,7 @@
                                                         <h2 class="et_pb_module_header"><span>MINI TANA DIGITAL</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$21.99</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡12.000</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                     <span class="text">Comprar</span>
