--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                                             <div class="deal-category-sec">
                                                 <h5 class="deal-cat">₡5.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">MINI PIPA</h3>
+                                            <h3 class="deals-tit">Mini Pipa</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Esta pipa clásica de estilo cuchara ofrece hits con estilo! Una pieza clásica compacta, robusta y versátil.</h6>
                                             </div>
