--- a/index.html
+++ b/index.html
@@ -413,7 +413,6 @@
                                                                    <span class="bg"></span>
                                                                </a>
 
-
                                                            </div>
                                                        </div>
                                                    </div>
@@ -423,7 +422,7 @@
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Los mejores accesorios 420</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                           <span class="text">Explorar tienda</span>
+                                                                           <span class="text">Shop</span>
                                                                            <span class="bg"></span>
                                                                        </a>
                                                                    </div>
