--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                         <div class="et_pb_module et_pb_text et_pb_text_5  et_pb_text_align_left et_pb_bg_layout_light">
 
                                             <div class="et_pb_text_inner">
-                                                <p>Por el equilibrio y la armonía en nuestro cuerpo.<br><br> </p>
+                                                <p>Por el equilibrio y la armonía en nuestro cuerpo 🧘<br><br> </p>
                                             </div>
 
 
