--- a/shop/index.html
+++ b/shop/index.html
@@ -434,7 +434,7 @@ heateor_sss_vertical_sharing{
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg)">
                                                             <div class="slider-content et_pb_row">
-                                                                <h2>Equilibrio y armonía en nuestro cuerpo</h2>
+                                                                <h2>Equilibrio y armonía en nuestro cuerpo 🧘</h2>
                                                                 <a class="more btn btn--black" target="" href="#shop-herbalist">
                                                                     <span class="text">Shop</span>
                                                                     <span class="bg"></span>
