--- a/index.html
+++ b/index.html
@@ -403,10 +403,10 @@
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg');">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg');">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text">Entregando salud y felicidad™</h2>
+                                                                <h2 class="custom-slider-text">Herbalist Kit™</h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
@@ -550,10 +550,6 @@
                                             <div class="et_pb_text_inner">
                                                 <p>Por el equilibrio y la armonía en nuestro cuerpo🧘<br><br> </p>
                                             </div>
-
-
-                                            <!--<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2M99lePMRPYzvWgOfJjZT3?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>-->
-
 
                                         </div>
 
