--- a/index.html
+++ b/index.html
@@ -403,10 +403,10 @@
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg');">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg'); background-position: 100%">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text">Herbalist Kit™</h2>
+                                                                <h2 class="custom-slider-text">The Herbalist Kit™ <br>por solo ₡25.000 </h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
