--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg'); background-position: 100%">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text">The Herbalist Kit™ <br>por solo ₡25.000 </h2>
+                                                                <h2 class="custom-slider-text herbalist-kit">The Herbalist Kit™ <br>por solo $39.99 </h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
