--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -465,7 +464,7 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Herbalist Smoke Shop: Bongs, pipas, CBD y más accesorios para fumar</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Bongs, pipas, CBD y accesorios para fumar</h1></div>
                                             </div>
                                         </div>
                                     </div>
