--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                                        <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg);">
                                                                    <div class="slider-content et_pb_row">
-                                                                       <h2>Los mejores accesorios 420</h2>
+                                                                       <h2>Entregando salud y felicidad™</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                            <span class="text">Shop</span>
                                                                            <span class="bg"></span>
