--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                                             </div>
                                             <h3 class="deals-tit">Mini Pipa</h3>
                                             <div class="deal-store-sec">
-                                                <h6 class="deals-store">Esta pipa clásica de estilo cuchara ofrece hits con estilo! Una pieza clásica compacta, robusta y versátil.</h6>
+                                                <h6 class="deals-store">Una pieza clásica compacta, robusta y versátil.</h6>
                                             </div>
                                         </div>
                                     </div><div class="deals-info row">
