--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                             </div>
                                             <h3 class="deals-tit">Tana - Mini báscula digital</h3>
                                             <div class="deal-store-sec">
-                                                <h6 class="deals-store">Pesa tus hierbas con la mejor precisión</h6>
+                                                <h6 class="deals-store">Pesa tu hierba con la mejor precisión.</h6>
                                             </div>
                                         </div>
                                     </div><div class="deals-info row">
