--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <link rel='stylesheet' id='divi-style-css'  href='https://www.herbalist.ml/css/divi-child/style.css?ver=1.2.0' type='text/css' media='all' />
 
     <!-- custom css -->
-    <link rel='stylesheet'  href='https://www.herbalist.ml/css/custom.css?v1' type='text/css' media='all' />
+    <link rel='stylesheet'  href='https://www.herbalist.ml/css/custom.css?v2' type='text/css' media='all' />
     <!-- custom css -->
 
     <link rel='shortlink' href='https://www.herbalist.ml/' />
@@ -405,7 +405,7 @@
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg'); background-position: 100%">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text herbalist-kit">The Herbalist Kit™ <br>por solo $39.99 </h2>
+                                                                <h2 class="custom-slider-text herbalist-kit">The Herbalist Kit <br>por solo $39.99 </h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
