--- a/index.html
+++ b/index.html
@@ -401,7 +401,9 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_0  et_pb_text_align_left et_pb_bg_layout_light">
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
-                                                    <div class="owl-carousel owl-theme"><div class="owl-slider item">
+                                                    <div class="owl-carousel owl-theme">
+
+                                                        <div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg'); background-position: 100%">
                                                             <div class="slider-content et_pb_row">
 
@@ -427,6 +429,18 @@
                                                                    </div>
                                                                </div>
                                                            </div>
+
+                                                        <div class="owl-slider item">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg);">
+                                                                <div class="slider-content et_pb_row">
+                                                                    <h2>Descubre los mejores <br> Accesorios 420 </h2>
+                                                                    <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                        <span class="text">Shop</span>
+                                                                        <span class="bg"></span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
 
                                                     </div>
                                                 </div>
