--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                                        <div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg);">
                                                                    <div class="slider-content et_pb_row">
-                                                                       <h2>Altamente Curado 🥦🍋</h2>
+                                                                       <h2>Altamente Curado🍃</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                            <span class="text">Shop</span>
                                                                            <span class="bg"></span>
@@ -430,17 +430,6 @@
                                                                </div>
                                                            </div>
 
-                                                        <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg);">
-                                                                <div class="slider-content et_pb_row">
-                                                                    <h2>Descubre los mejores <br> Accesorios 420 </h2>
-                                                                    <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                        <span class="text">Shop</span>
-                                                                        <span class="bg"></span>
-                                                                    </a>
-                                                                </div>
-                                                            </div>
-                                                        </div>
 
                                                     </div>
                                                 </div>
