--- a/shop/index.html
+++ b/shop/index.html
@@ -430,6 +430,7 @@ heateor_sss_vertical_sharing{
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
+
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg)">
                                                             <div class="slider-content et_pb_row">
                                                                 <h2>Equilibrio y armonía en nuestro cuerpo🧘</h2>
@@ -437,9 +438,21 @@ heateor_sss_vertical_sharing{
                                                                     <span class="text">Shop</span>
                                                                     <span class="bg"></span>
                                                                 </a>
-
                                                             </div>
                                                         </div>
+
+                                                        <div class="owl-slider item">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg);">
+                                                                <div class="slider-content et_pb_row">
+                                                                    <h2>Descubre los mejores <br> Accesorios 420 </h2>
+                                                                    <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                        <span class="text">Shop</span>
+                                                                        <span class="bg"></span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
                                                     </div>
                                                     </div>
                                                 </div>
