--- a/shop/index.html
+++ b/shop/index.html
@@ -429,7 +429,9 @@ heateor_sss_vertical_sharing{
                                             <div class="et_pb_module et_pb_text et_pb_text_0  et_pb_text_align_left et_pb_bg_layout_light">
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
-                                                    <div class="owl-carousel owl-theme"><div class="owl-slider item">
+                                                    <div class="owl-carousel owl-theme">
+
+                                                        <div class="owl-slider item">
 
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg)">
                                                             <div class="slider-content et_pb_row">
@@ -442,19 +444,16 @@ heateor_sss_vertical_sharing{
                                                         </div>
 
 
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg);">
-                                                                <div class="slider-content et_pb_row">
-                                                                    <h2>Descubre los mejores <br> Accesorios 420 </h2>
-                                                                    <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                        <span class="text">Shop</span>
-                                                                        <span class="bg"></span>
-                                                                    </a>
-                                                                </div>
-                                                            </div>
+
+                                                    </div>
+
+
 
 
                                                     </div>
-                                                    </div>
+
+
+
                                                 </div>
 
                                                     <script>
