--- a/shop/index.html
+++ b/shop/index.html
@@ -432,7 +432,6 @@ heateor_sss_vertical_sharing{
                                                     <div class="owl-carousel owl-theme">
 
                                                         <div class="owl-slider item">
-
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg)">
                                                             <div class="slider-content et_pb_row">
                                                                 <h2>Equilibrio y armonía en nuestro cuerpo🧘</h2>
@@ -442,12 +441,19 @@ heateor_sss_vertical_sharing{
                                                                 </a>
                                                             </div>
                                                         </div>
-
-
-
                                                     </div>
 
-
+                                                        <div class="owl-slider item">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
+                                                                <div class="slider-content et_pb_row">
+                                                                    <h2>Descubre los mejores <br> accesorios 420 </h2>
+                                                                    <a class="more btn btn--black" target="" href="#shop-herbalist">
+                                                                        <span class="text">Shop</span>
+                                                                        <span class="bg"></span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
 
 
                                                     </div>
