--- a/shop/index.html
+++ b/shop/index.html
@@ -470,7 +470,7 @@ heateor_sss_vertical_sharing{
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: false,
+                                                                autoplay: true,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
