--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                         <div class="et_pb_row et_pb_row_0_tb_footer et_pb_row_fullwidth cus-animate-wrap">
                             <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><p>Hebalist• Smoke• Shop• Hemp• Kratom• THC• CBD• Sativa• Índica</p></div>
+                                    <div class="et_pb_text_inner"><p>HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP</p></div>
                                 </div>
                             </div>
                         </div>
