--- a/index.html
+++ b/index.html
@@ -666,17 +666,40 @@
             <!-- footer 1 -->
             <footer class="et-l et-l--footer">
                 <div class="et_builder_inner_content et_pb_gutters3">
-                    <div class="et_pb_section et_pb_section_1_tb_footer cus-animate-section et_section_regular" >
+                    <div class="et_pb_section et_pb_section_1_tb_footer cus-animate-section et_section_regular" style="display: block;">
 
-                        <div class="et_pb_row et_pb_row_0_tb_footer et_pb_row_fullwidth cus-animate-wrap">
+
+
+
+                        <div class="et_pb_row et_pb_row_1_tb_footer et_pb_row_fullwidth marquee">
                             <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
-                                <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><p>HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP</p></div>
+
+
+                                <div class="et_pb_module et_pb_code et_pb_code_0_tb_footer marquee__inner ">
+
+
+                                    <div class="et_pb_code_inner"><span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span>
+                                        <span>• 1% OF SALES IS DONATED BACK TO THE COMMUNITY</span></div>
                                 </div>
                             </div>
+
+
                         </div>
 
-                    </div><div class="et_pb_section et_pb_section_3_tb_footer et_section_regular" >
+
+                    </div>
+
+                    <div class="et_pb_section et_pb_section_3_tb_footer et_section_regular" >
 
                     <div class="et_pb_row et_pb_row_1_tb_footer et_pb_gutters4">
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1_tb_footer  et_pb_css_mix_blend_mode_passthrough">
