--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -1061,7 +1061,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20 • ACCESORIOS 4:20
+                                            HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP
                                         </p>
                                     </div>
                                 </div>
