--- a/shop/index.html
+++ b/shop/index.html
@@ -434,7 +434,7 @@ heateor_sss_vertical_sharing{
                                                         <div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg)">
                                                             <div class="slider-content et_pb_row">
-                                                                <h2>Equilibrio y armonía en nuestro cuerpo🧘</h2>
+                                                                <h2>Altamente Curado 🍃</h2>
                                                                 <a class="more btn btn--black" target="" href="#shop-herbalist">
                                                                     <span class="text">Shop</span>
                                                                     <span class="bg"></span>
@@ -444,7 +444,7 @@ heateor_sss_vertical_sharing{
                                                     </div>
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/pipes.jpg);">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2>Descubre los mejores <br> accesorios 420 </h2>
                                                                     <a class="more btn btn--black" target="" href="#shop-herbalist">
