--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -953,32 +953,32 @@
 
                                             <h2>¿Por qué son populares las pipas para fumar?</h2>
 
-                                            <p><b>Las pipas</b> son uno de los accesorios para fumar más populares en el mundo porque son una forma clásica y económica de <b>fumar hierbas secas y tabaco</b>. Las pipas de vape nunca pasaron de moda porque simplemente funcionan, pueden estar hechas de casi cualquier material y pueden venir en una variedad de hermosos diseños.</p>
+                                            <p><b>Las pipas</b> son uno de los accesorios para fumar más populares en el mundo porque son una forma clásica y económica de <b>fumar hierba o tabaco</b>. Las pipas nunca pasaron de moda porque funcionan, pueden estar hechas de casi cualquier material y pueden venir en una variedad de hermosos diseños.</p>
                                             <h2>¿Cómo fumar en pipa?</h2>
 
 
-                                            <p>Dado que las pipas son uno de los accesorios para fumar más simples que existen, fumar en una pipa es bastante sencillo. Simplemente muele su hierba (tenemos una gran selección de molinillos), colóquela en su tazón, enciéndala con el dedo sobre el orificio del carburador, luego destape el orificio e inhale. Son fáciles de usar incluso si nunca has fumado antes.</p>
+                                            <p>Dado que las pipas son uno de los accesorios para fumar más simples que existen, fumar en una pipa es bastante sencillo. Simplemente pica la hierba (tenemos una gran selección de grinders), colóquela en su pipa, enciéndala con el dedo sobre el orificio del costado conocido en Costa Rica como El CluTHC, luego destape el orificio e inhale. Son fáciles de usar incluso si nunca has fumado antes.</p>
                                             <h2>¿Por qué usar una pipa?</h2>
 
 
-                                            <p>Algunas personas prefieren los efectos de filtrado del agua en un <a href="https://www.herbalist.ml/shop/bongs/">bong</a> o bubbler, pero no hay nada mejor que la comodidad y la portabilidad de una pipa de mano. La mayoría de las pipas caben fácilmente en el bolsillo de tus jeans o vestido, en tu bolso o mochila, o en el cajón de tu mesita de noche, además puedes llevar fácilmente tu pipa favorita a la casa de tu mejor amigo o pasarla alrededor de la fogata. Tenemos <a href="https://www.herbalist.ml/shop/pipas/">pipas de vidrio geniales</a>&nbsp;a la venta para cada ocasión.</p>
-                                            <h2>¿Cuál es la mejor pipa para mí?</h2>
+                                            <p>Algunas personas prefieren los efectos de filtrado del agua en un <a href="https://www.herbalist.ml/shop/bongs/">bong</a> o bubbler, pero no hay nada mejor que la comodidad y la portabilidad de una pipa de mano. La mayoría de las pipas caben fácilmente en el bolsillo de tus jeans o vestido, en tu bolso o mochila, o en el cajón de tu mesita de noche, además puedes llevar fácilmente tu pipa favorita a la casa de tu mejor amigo o pasarla alrededor de la fogata. En Herbalist Smoke Shop tenemos <a href="https://www.herbalist.ml/shop/pipas/">pipas geniales</a>&nbsp;a la venta para cada ocasión.</p>
+                                            <h2>¿Cuál es la mejor pipa para tí?</h2>
 
 
                                             <meta charset="utf-8">
-                                            <p><span>&nbsp;Las tuberías son extremadamente versátiles, están hechas de vidrio, metal, silicona, acrílico, madera y vienen en una variedad de estilos. Cómprate una pipa genial una vez que hayas tenido la oportunidad de determinar qué estilo es mejor para cómo te gusta encender.</span></p>
+                                            <p><span>&nbsp;Las pipas son extremadamente versátiles, están hechas de vidrio, metal, silicona, acrílico, madera y vienen en una variedad de estilos. Cómprate una pipa genial una vez que hayas tenido la oportunidad de ver nuestra colección de las mejores.</span></p>
                                             <ul>
                                                 <li>
                                                     <b><a href="https://www.herbalist.ml/shop/pipas/">Pipas Clásicas</a>&nbsp;</b>-Tu clásica pipa de mano con tubo recto y cazoleta gruesa. El carbohidrato en una cuchara está en el costado del tazón. A continuación encontrará un arcoíris de <a href="https://www.herbalist.ml/shop/pipas/">pipas de vidrio</a>.</li>
                                                 <li>
-                                                    <b>Hitters</b>&nbsp;- También conocidos como one-hitters, estos son geniales para conciertos, remontes o fumar sobre la marcha. Como su nombre lo indica, estas pipas tienen un recipiente pequeño que contiene suficiente hierba para una calada. Su pequeño tamaño los hace compactos y discretos. Tenemos una selección de one-hitters en vidrio glass, metal, y hasta cerámica.</li>
+                                                    <b>Hitters</b>&nbsp;- También conocidos como one-hitters, estos son geniales para conciertos o fumar sobre la marcha. Como su nombre lo indica, estas pipas tienen un recipiente pequeño que contiene suficiente hierba para un solo hit. Su pequeño tamaño los hace muy compactos y discretos. Tenemos una selección de one-hitters en vidrio glass, metal, y hasta cerámica.</li>
                                                 <li>
                                                     <b><a href="https://www.herbalist.ml/shop/pipas/">Pipas dobles</a>&nbsp;</b>-Estos funcionan exactamente como las pipas clásicas, pero le permiten empacar el doble. Estos son geniales para el fumador perezoso al que no le gusta seguir empacando tazones, o para las parejas que quieren compartir sin realmente "compartir".</li>
 
                                                 <li>
-                                                    <strong>Blunt de vidrio</strong> - Si estás cansado de quedarte sin papel de liar, los blunts de vidrio son una excelente manera de tener la experiencia de un porro sin la molestia.&nbsp;</li>
+                                                    <strong>Blunt de vidrio</strong> - Si estás cansado de quedarte sin boletas, los blunts de vidrio son una excelente manera de tener la experiencia de un puro sin la molestia de enrolar cada vez que fumes.&nbsp;</li>
                                                 <li>
-                                                    <strong>Pipas de Sherlock</strong> - Estas son piezas impresionantes con cuencos espaciosos y generalmente están hechas de vidrio.</li>
+                                                    <strong>Pipas de Sherlock</strong> - Estas son piezas impresionantes y grandes, generalmente están hechas de vidrio o madera.</li>
                                             </ul>
                                             <h2>Materiales para una pipa<br>
                                             </h2>
@@ -986,7 +986,7 @@
 
                                             <ul>
                                                 <li>
-                                                    <b>Pipas vidrio de borosilicato soplado a mano resistentes al calor</b>&nbsp;- ¡Lo mejor de los Pipas vidrio soplado a mano es la multitud de formas y colores en los que vienen! El proceso de soplado de vidrio permite a los creadores hacer pipas de cristal con formas de animales y texturas divertidas. Glass también te permite comprobar cuándo es el momento de limpiar la pieza. Con tantos diseños geniales, seguramente te enamorarás de una de nuestras hermosas pipas de vidrio de alta calidad</li>
+                                                    <b>Pipas vidrio de borosilicato soplado a mano resistentes al calor</b>&nbsp;- ¡Lo mejor de los Pipas vidrio soplado a mano es la multitud de formas y colores en los que vienen! El proceso de soplado de vidrio permite a los creadores hacer pipas de cristal con formas de animales y texturas divertidas. El vidrio también te permite saber cuándo es el momento de limpiar la pieza. Con tantos diseños geniales, seguramente te enamorarás de una de nuestras hermosas pipas de vidrio de alta calidad</li>
                                                 <li>
                                                     <b>Pipas cerámica</b>&nbsp;: dado que la cerámica es un mal conductor del calor, se mantendrán más frescos en sus manos mientras los usa. También vienen en algunos diseños bastante interesantes. La cerámica es uno de los materiales más caros dado que no es el más fácil de trabajar, pero estas son algunas de las pipas de estilo más hermosas y decorativas disponibles.</li>
                                                 <li>
