--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -399,11 +399,25 @@
                                                 <div class="et_pb_text_inner">
                                                     <div class="feature_slider" id="feature_slider">
                                                         <div class="owl-carousel owl-theme">
+
                                                             <div class="owl-slider item">
-                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping.jpg?v2)">
+                                                                <div class="feature-slider " style="background-image: url(https://cdn.shopify.com/s/files/1/0046/7792/6983/files/KushSlide3_1944x.jpg?v=1625157440)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Entregando salud & felicidad™</h2>
-                                                                        <a class="more btn btn--black" target="" href="https://tawk.to/chat/61702d8df7c0440a591f2df4/default" style="display: none">
+                                                                        <h2>Carts Exóticos</h2>
+                                                                        <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=Consulte por nuestros Carts:)">
+                                                                            <span class="text">Shop</span>
+                                                                            <span class="bg"></span>
+                                                                        </a>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="owl-slider item">
+                                                                <div class="feature-slider " style="background-image: url(https://cdn.shopify.com/s/files/1/0046/7792/6983/files/waui3_c962e2b4-f9c9-4500-8525-c0ba2bf270d9_1944x.jpg?v=1615403477);">
+                                                                    <div class="slider-content et_pb_row">
+                                                                        <h2>Espectro Completo</h2>
+                                                                        <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=Consulte por nuestros Carts:)">
+                                                                            <span class="text">Shop</span>
                                                                             <span class="bg"></span>
                                                                         </a>
                                                                     </div>
