--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -404,10 +404,7 @@
                                                                 <div class="feature-slider " style="background-image: url(https://cdn.shopify.com/s/files/1/0046/7792/6983/files/KushSlide3_1944x.jpg?v=1625157440)">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2>Carts Exóticos</h2>
-                                                                        <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=Consulte por nuestros Carts:)">
-                                                                            <span class="text">Shop</span>
-                                                                            <span class="bg"></span>
-                                                                        </a>
+
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -416,10 +413,7 @@
                                                                 <div class="feature-slider " style="background-image: url(https://cdn.shopify.com/s/files/1/0046/7792/6983/files/waui3_c962e2b4-f9c9-4500-8525-c0ba2bf270d9_1944x.jpg?v=1615403477);">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2>Espectro Completo</h2>
-                                                                        <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=Consulte por nuestros Carts:)">
-                                                                            <span class="text">Shop</span>
-                                                                            <span class="bg"></span>
-                                                                        </a>
+
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -435,7 +429,7 @@
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: false,
+                                                                autoplay: true,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
@@ -460,7 +454,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Vapes</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Vaping</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
