--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -401,7 +401,7 @@
                                                         <div class="owl-carousel owl-theme">
 
                                                             <div class="owl-slider item">
-                                                                <div class="feature-slider " style="background-image: url(https://cdn.shopify.com/s/files/1/0046/7792/6983/files/KushSlide3_1944x.jpg?v=1625157440)">
+                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/site/rove-kush.jpeg)">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2>Carts Exóticos</h2>
 
@@ -410,7 +410,7 @@
                                                             </div>
 
                                                             <div class="owl-slider item">
-                                                                <div class="feature-slider " style="background-image: url(https://cdn.shopify.com/s/files/1/0046/7792/6983/files/waui3_c962e2b4-f9c9-4500-8525-c0ba2bf270d9_1944x.jpg?v=1615403477);">
+                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/site/rove-waui.jpeg);">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2>Espectro Completo</h2>
 
