--- a/shop/index.html
+++ b/shop/index.html
@@ -444,7 +444,7 @@ heateor_sss_vertical_sharing{
                                                     </div>
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/pipes.jpg);">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping2.jpg);">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2>Descubre los mejores <br> accesorios 420 </h2>
                                                                     <a class="more btn btn--black" target="" href="#shop-herbalist">
