--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -279,7 +279,7 @@
 
                         <div class="et_pb_column et_pb_column_1_3 et_pb_column_6_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_button_module_wrapper et_pb_button_0_tb_header_wrapper et_pb_button_alignment_right et_pb_module ">
-                                <a id="slide-in-open-shop" class="et_pb_button et_pb_button_0_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/pipas">Comprar</a>
+                                <a id="slide-in-open-shop" class="et_pb_button et_pb_button_0_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/pipas">Shop</a>
                             </div>
                         </div>
 
