--- a/shop/index.html
+++ b/shop/index.html
@@ -696,7 +696,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                             <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/ig-logo.jpg?v476" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
                             </span>
                             </a>
 
