--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                                                     <div class="owl-carousel owl-theme">
 
                                                         <div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg'); background-position: 100%">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/purple.png'); background-position: 100%">
                                                             <div class="slider-content et_pb_row">
 
                                                                 <h2 class="custom-slider-text herbalist-kit">Accesorios premium</h2>
@@ -442,7 +442,7 @@
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: false,
+                                                                autoplay: true,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
