--- a/index.html
+++ b/index.html
@@ -404,10 +404,10 @@
                                                     <div class="owl-carousel owl-theme">
 
                                                         <div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/purple.png'); background-position: 100%">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg');">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text herbalist-kit">Accesorios premium</h2>
+                                                                <h2 class="custom-slider-text herbalist-kit">Descubre los mejores accesorios 420</h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Shop</span>
