--- a/shop/index.html
+++ b/shop/index.html
@@ -1318,7 +1318,7 @@ heateor_sss_vertical_sharing{
                                                                     dots: true,
                                                                     dotsEach: true,
                                                                     responsiveClass:true,
-                                                                    autoplay:false,
+                                                                    autoplay:true,
                                                                     responsive:{
                                                                         0:{
                                                                             items:1,
