--- a/shop/index.html
+++ b/shop/index.html
@@ -1313,12 +1313,12 @@ heateor_sss_vertical_sharing{
                                                             jQuery(document).ready(function() {
                                                                 jQuery(".product-list .owl-theme").owlCarousel({
                                                                     // items: 4,
+                                                                    autoPlay: 500,
                                                                     loop: true,
                                                                     nav: false,
                                                                     dots: true,
                                                                     dotsEach: true,
                                                                     responsiveClass:true,
-                                                                    autoplay:true,
                                                                     responsive:{
                                                                         0:{
                                                                             items:1,
