--- a/shop/index.html
+++ b/shop/index.html
@@ -1313,7 +1313,8 @@ heateor_sss_vertical_sharing{
                                                             jQuery(document).ready(function() {
                                                                 jQuery(".product-list .owl-theme").owlCarousel({
                                                                     // items: 4,
-                                                                    autoPlay: 500,
+                                                                    autoplay:true,
+                                                                    autoplayTimeout:1000,
                                                                     loop: true,
                                                                     nav: false,
                                                                     dots: true,
