--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                             <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
                                     <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
-<p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>🇨🇷 Tranquilino Sáenz Flores, Heredia, Costa Rica.</p>
                                 </div>
 
 
