--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Bongs, pipas, vapes, cbd & accesorios 420 * Herbalist Smoke Shop</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Bongs, pipas, vapes, cbd, accesorios 420 * Herbalist Smoke Shop</h1></div>
                                             </div>
                                         </div>
                                     </div>
@@ -677,7 +677,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP• HERBALIST SMOKE SHOP
+                                            HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP
                                         </p>
                                     </div>
                                 </div>
