--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                                        </div>
                                                    </div>
 
-                                                       <div class="owl-slider item">
+                                                        <!--<div class="owl-slider item">
                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Altamente Curado</h2>
@@ -428,7 +428,7 @@
                                                                        </a>
                                                                    </div>
                                                                </div>
-                                                           </div>
+                                                           </div>-->
 
 
                                                     </div>
@@ -442,7 +442,7 @@
                                                                 nav: true,
                                                                 dots: true,
                                                                 dotsEach: true,
-                                                                autoplay: true,
+                                                                autoplay: false,
                                                                 // autoplayTimeout: varAutoTime,
                                                                 // autoplay:false,
                                                                 // autoplayTimeout:3000,
