--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Bongs, pipas, vapes, cbd & accesorios 420 * Herbalist Smoke Shop</title>
+    <title>Bongs, pipas, vapes, cbd, accesorios 420 * Herbalist Smoke Shop</title>
     <meta name="description" content="Smoke shop #1 en Costa Rica con lo mejor en pipas, bongs, cbd, vaporizadores y otros accesorios para fumar" />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
@@ -26,7 +26,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bongs, pipas, vapes, cbd & accesorios 420 * Herbalist Smoke Shop" />
+    <meta property="og:title" content="Bongs, pipas, vapes, cbd, accesorios 420 * Herbalist Smoke Shop" />
     <meta property="og:description" content="Smoke shop #1 en Costa Rica con lo mejor en pipas, bongs, cbd, vaporizadores y otros accesorios para fumar" />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
