--- a/shop/index.html
+++ b/shop/index.html
@@ -431,7 +431,7 @@ heateor_sss_vertical_sharing{
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme">
 
-                                                        <div class="owl-slider item">
+                                                        <!--<div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/terpenes.jpeg)">
                                                             <div class="slider-content et_pb_row">
                                                                 <h2>Altamente Curado 🍃</h2>
@@ -441,7 +441,7 @@ heateor_sss_vertical_sharing{
                                                                 </a>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div>-->
 
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping2.jpg);">
