--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -391,7 +391,7 @@
                                                     <div class="feature_slider" id="feature_slider">
                                                         <div class="owl-carousel owl-theme">
                                                             <div class="owl-slider item">
-                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/cultivo.jpg)">
+                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/matas.jpeg)">
                                                                     <div class="slider-content et_pb_row">
 
                                                                     </div>
